--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
     <div class="contact">
       <b>Contact:</b>
       <ul>
-        <li>Email: <a href="mailto:changeyour@email.com">changeyour@email.com</a></li>
-        <li>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></li>
+        <li>Email: <a href="mailto:202211680487@stu.blcu.edu.cn">changeyour@email.com</a></li>
+        <li>GitHub: <a href="https://github.com/yichengjuxu88" target="_blank">github.com/yourusername</a></li>
       </ul>
       <i>* Replace the contact information with your details *</i>
     </div>
